2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-status.c:
    * libseahorse/Makefile.am:
    * libseahorse/eggtrayicon.c (removed):
    * libseahorse/eggtrayicon.h (removed): Use GtkStatusIcon from 
    GTK 2.10. Patch by chpe. Fixes bug #349286

2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-main.c:
    * daemon/seahorse-daemon.c:
    * plugins/nautilus/seahorse-pgp-preferences.c:
    * plugins/nautilus/seahorse-tool.c: Use GOption for parsing command 
    line arguments. Fixes bug #336146
    * configure.in:
    * INSTALL: Update libgnome dependency for seahorse

2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-cache.c:
    * agent/seahorse-agent-main.c:
    * daemon/seahorse-daemon.c:
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-unix-signal.c:
    * libseahorse/seahorse-unix-signal.h: Stop copious polling in the background 
    Fixes bug #354432

2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-keyset.c: Fix problem with not refreshing after
    deleting or adding keys. Fixes bug #388318
    * libseahorse/seahorse-key.c: Null check

2006-12-19  Adam Schreiber  <sadam@clemson.edu>

    * configure.in:
    * po/LINGUAS(added): GNOME PO LINGUAS goal. Fixes #338730

2006-12-19  Nate Nielsen  <nielsen@memberwebs.com>

    * README:
    * NEWS:
    * plugins/applet/docs/Makefile.am: Version 0.9.9
    * configure.in: Update version number
  
2006-12-18  Adam Schreiber  <sadam@clemson.edu>

    * src/seahorse-keyserver-sync.glade:
    * src/seahorse-pgp-private-key-properties.glade:
    *  src/seahorse-ssh-generate.glade: Make labels translatable.
    Patch from milo_casagrande@yahoo.it. Fixes #387293
    
2006-12-14  Nate Nielsen  <nielsen@memberwebs.com>

	* libcryptui/cryptui-key-store.c: Fix crasher when filtering keys
	Fixes bug #376729
	
2006-12-11  Nate Nielsen  <nielsen@memberwebs.com>
