@@ -1,5 +1,10 @@
 2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
 
+    * libseahorse/seahorse-pgp-key.c: Add strikethrough for expired, 
+    revoked, disabled keys. Patch by Adam Schreiber. Fixes bug #357323
+    
+2006-12-21  Nate Nielsen  <nielsen@memberwebs.com>
+
     * agent/seahorse-agent-status.c:
     * libseahorse/Makefile.am:
     * libseahorse/eggtrayicon.c (removed):
